<resources>
    <string name="app_name">E-Commerce</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="act_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="act_remember_me">Remember Me</string>
    <string name="act_sign_in">Sign In</string>
    <string name="act_sign_with_google">Sign With Google</string>
    <string name="act_sign_with_facebook">Sign With Facebook</string>
    <string name="share">Share</string>

    <string name="facebook_app_id">1114423968597471</string>
    <string name="fb_login_protocol_scheme">fb1114423968597471</string>

</resources>
